testing + updating models Co-authored-by: Nour-Eldin Akram Elsayed <nourakram94@gmail.com>