@@ -1,13 +1,18 @@
-package model.graph.impl;
+package backend.SFG.model.graph.impl;
 
-import lombok.Data;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.BitSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Objects;
 
-@Data
+import lombok.Getter;
+
+@Getter
 public class Path implements Cloneable {
-//    public static final String[] subscripts = {
-//        "₀", "₁", "₃", "₆", "₉", "₇", "₄", "₅", "₂", "₈"
-//    };
+    // public static final String[] subscripts = {
+    // "₀", "₁", "₃", "₆", "₉", "₇", "₄", "₅", "₂", "₈"
+    // };
 
     public enum Type {
         LOOP,
@@ -15,9 +20,6 @@ public class Path implements Cloneable {
     }
 
     public static final String DELIMITER = " * ";
-
-    private static int numberOfPaths = 0;
-    private static int numberOfLoops = 0;
 
     private String name;
     private BitSet bitSet;
@@ -27,10 +29,11 @@ public class Path implements Cloneable {
     private String gain;
 
     public Path(int startNode, Type type) {
-        if(type == Type.LOOP) {
-            this.name = "L" + numberOfLoops++;
-        } else if (type == Type.PATH){
-            this.name = "P" + numberOfPaths++;
+        if (type == Type.LOOP) {
+            this.name = "L";// + number;
+
+        } else if (type == Type.PATH) {
+            this.name = "P";// + number;
         }
 
         this.startNode = startNode;
@@ -58,14 +61,18 @@ public class Path implements Cloneable {
         bitSet.set(edge.getToNode());
         edges.add(edge);
 
-        if(!gain.isEmpty()) gain += DELIMITER;
+        if (!gain.isEmpty())
+            gain += DELIMITER;
         gain += edge.getGain();
     }
 
     public void removeLastEdge() {
         if (!edges.isEmpty()) {
-            Edge removed = edges.removeLast();
+            // Edge removed = edges.removeLast();
+            Edge removed = edges.remove(edges.size() - 1);
             bitSet.clear(removed.getToNode());
+            int lastIndex = gain.lastIndexOf(DELIMITER);
+            gain = (lastIndex != -1) ? gain.substring(0, lastIndex) : "";
         }
     }
 
@@ -88,19 +95,47 @@ public class Path implements Cloneable {
     public static String calculateDelta(List<List<GroupOfLoops>> groups) {
         boolean sign = true;
         StringBuilder stringBuilder = new StringBuilder("1");
+
         for (List<GroupOfLoops> groupOfLoops : groups) {
-            stringBuilder.append(sign ? " - " : " + " ).append("(");
+            if (groupOfLoops.isEmpty())
+                break;
+
+            boolean firstTerm = true; // Track first term to avoid unnecessary "+"
+
+            if (groupOfLoops.get(0).getLoops().isEmpty())
+                continue;
+
+            stringBuilder.append(sign ? " - " : " + ").append("(");
             sign = !sign;
 
             for (GroupOfLoops group : groupOfLoops) {
-                stringBuilder.append(" + ")
-                             .append("(")
-                             .append(group.getTotalGain())
-                             .append(")");
+
+                if (!firstTerm) {
+                    stringBuilder.append(" + ");
+                }
+                firstTerm = false;
+
+                stringBuilder.append("(").append(group.getTotalGain()).append(")");
             }
             stringBuilder.append(")");
         }
 
         return stringBuilder.toString();
     }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(bitSet);
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj)
+            return true;
+        if (obj == null || getClass() != obj.getClass())
+            return false;
+        Path other = (Path) obj;
+        return Objects.equals(this.bitSet, other.bitSet);
+    }
+
 }
